[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["Uber Technologies Inc."]
license-file = "LICENSE"

# Workspace-level dependencies that can be inherited by member crates
[workspace.dependencies]
# Core dependencies
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.82"
