[project]
name = "polyglot_piranha"
requires-python = ">=3.8"
dynamic = ["version"]
description = "Polyglot Piranha is a library for performing structural find and replace with deep cleanup."
authors = [{ name = "Uber Technologies Inc." }]
license = "Apache-2.0"
readme = "README.md"
keywords = [
  "refactoring",
  "code update",
  "structural find-replace",
  "structural search and replace",
  "structural search",
]

[project.urls]
homepage = "https://github.com/uber/piranha"
documentation = "https://github.com/uber/piranha"
repository = "https://github.com/uber/piranha"

[build-system]
# There is a bug with maturin 1.9.0 that incorrectly packages LICENSE file causing a problem.
# For now we have to pin it to 1.8.7 (last stable version).
# TODO: remove this check once maturin is fixed.
requires = ["maturin>=1.4.0,<=1.8.7"]
build-backend = "maturin"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.maturin]
bindings = "pyo3"
include = ["LICENSE", "NOTICE", "polyglot_piranha.pyi"]
