[package]
name = "piranha-tree-sitter"
version = "0.1.0"
edition = "2021"
include = [
    "build.rs",
    "src/",
    "vendor/**/*.c",
    "vendor/**/*.h",
    "vendor/**/*.cc",
#    "README.md",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0.72"

[dependencies]
tree-sitter = "0.20.5"
tree-sitter-traversal = "0.1.2"
#tree-sitter-java = "0.19.0"
#tree-sitter-swift = "0.1.1"
json = "0.12.4"
env_logger = "0.9.0"
toml = "0.5.8"
serde = "1.0.136"
serde_derive = "1.0.136"
walkdir = "2.3.2"
grep = "0.2.8"
colored = "*"
snailquote="0.3.1"
petgraph="*"
itertools="*"
# extend = "1.1.2"
#ripgrep = "13.0.0"
