# Copyright (c) 2019 Uber Technologies, Inc.
#
# <p>Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
# except in compliance with the License. You may obtain a copy of the License at
# <p>http://www.apache.org/licenses/LICENSE-2.0
#
# <p>Unless required by applicable law or agreed to in writing, software distributed under the
# License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
# express or implied. See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "piranha-tree-sitter"
version = "0.1.0"
edition = "2021"
include = [
    "build.rs",
    "src/",
    "vendor/**/*.c",
    "vendor/**/*.h",
    "vendor/**/*.cc",
#    "README.md",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0.72"

[dependencies]
tree-sitter = "0.20.5"
json = "0.12.4"
toml = "0.5.8"
serde = "1.0.136"
serde_derive = "1.0.136"
colored = "*"
itertools="*"
regex = "1.5"
# snailquote="0.3.1"
# petgraph="*"
# grep = "0.2.8"
# tree-sitter-traversal = "0.1.2"
#tree-sitter-java = "0.19.0"
#tree-sitter-swift = "0.1.1"
# env_logger = "0.9.0"
jwalk="*"
clap = { version = "3.1.8", features = ["derive"] }
# closure_cacher= "*"
# extend = "1.1.2"
#ripgrep = "13.0.0"
