[package]
authors = ["Ameya Ketkar <ketkara@uber.com>", "Murali Krishna Ramanathan <murali@uber.com>"]
name = "piranha"
version = "0.1.1"
edition = "2021"
include = [
    "build.rs",
    "src/"
]

[build-dependencies]
cc = "1.0.73"

[dependencies]
tree-sitter = "0.20.6"
tree-sitter-traversal = "0.1.2"
json = "0.12.4"
toml = "0.5.9"
serde = "1.0.136"
serde_derive = "1.0.136"
colored = "2.0.0"
itertools= "0.10.3"
regex = "1.5.5"
jwalk= "0.6.0"
clap = { version = "3.1.12", features = ["derive"] }
log = "0.4.16"
env_logger = "0.9.0"
tempdir = "0.3"
tree-sitter-kotlin = { git = "https://github.com/ketkarameya/tree-sitter-kotlin.git" }
tree-sitter-java = { git = "https://github.com/tree-sitter/tree-sitter-java.git" }
tree-sitter-swift = { git = "https://github.com/ketkarameya/tree-sitter-swift.git", branch = "add_parser" }
tree-sitter-strings = { git = "https://github.com/ketkarameya/tree-sitter-strings.git" }
