[package]
name = "piranha-tree-sitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0.72"

[dependencies]
tree-sitter = "0.19.5"
tree-sitter-java = "0.19.0"
json = "0.12.4"
env_logger = "0.9.0"
toml = "0.5.8"
serde = "1.0.136"
serde_derive = "1.0.136"